Fix demo tab z-index and create z-index variables (#537)
Fixes https://github.com/canjs/bit-docs-html-canjs/issues/531

--- a/static/demo.less
+++ b/static/demo.less
@@ -17,7 +17,6 @@
       margin-bottom: -1px;
       border-radius: 4px 4px 0 0;
       background: @dark-border-color;
-      z-index: 10;
       margin-right: @gutter/2;
     }
     li.tab.active {
@@ -42,7 +41,6 @@
       overflow: auto;
       padding: @gutter;
       width: 100%;
-      z-index: 1;
     }
     pre{
       font-family: Menlo, "Bitstream Vera Sans Mono", "DejaVu Sans Mono", Monaco, Consolas, monospace;
