--- a/static/screenshots.less
+++ b/static/screenshots.less
@@ -32,7 +32,7 @@
 	    position: absolute;
 	    top: 15px;
 	    left: 15px;
-	    z-index: -1;
+	    z-index: @z-index-under;
     }
     &:before {
 	    content: "";
