--- a/static/variables.less
+++ b/static/variables.less
@@ -27,3 +27,8 @@
 
 /*----- OTHER -----*/
 @backdrop-blur: saturate(180%) blur(20px);
+
+/*----- Z-INDEX -----*/
+@z-index-under: -1;
+@z-index-header: 10;
+@z-index-page-loading-bar: 20;
